# ROS

./: .gitignore  README.md  nohup.out  pre-job-script.sh  test.py
.devcontainer/Jetson-Dev/: devcontainer.json
.devcontainer/Jetson-Runtime/: devcontainer.json
.devcontainer/ML-CPU/: devcontainer.json
.devcontainer/ML-GPU/: devcontainer.json
.devcontainer/ROS/: Dockerfile  devcontainer.json
.devcontainer/ROS-Dev/: devcontainer.json
.devcontainer/ZED-Dev/: devcontainer.json
.github/workflows/: delivery.yml  deployment.yml  docker-publish.yml  integration-testing.yml  integration.yml  linting.yml  merge.yml  model-conversion.yml  model-deployment.yml  performance-testing.yml  ros-packaging.yml
C++ Workspace/: .gitignore
C++ Workspace/ros2_ws/: README.MD
CI-CD Scripts/: post-job-script.sh  pre-job-script.sh  system_metrics_benchmarking.py
Calibration Tools/: camera_calibration.py  velocity.py
Container/: CPU.Dockerfile  Jetson-Dev.DockerFile  Jetson.DockerFile  compose.yaml
Container/grafana/: config.monitoring
Container/scripts/: install-build-essential.sh  install-opencv-cuda.sh  install-ros2-packages.sh  install-ros2.sh  install-script.sh  install-zed.sh
Containers/: CPU.Dockerfile  GPU.Dockerfile  Jetson-Base.Dockerfile  Jetson-Main.Dockerfile  Jetson.Dockerfile  PyTorch.Dockerfile  ROS-Base.Dockerfile  TensorFlow.Dockerfile
Containers/prometheus/: prometheus.yml
Containers/scripts/: install-build-essential.sh  install-cmake.sh  install-opencv-cuda.sh  install-ros2.sh  install-script.sh  install-zed.sh
Conversion Tools/: ONNX_TRT.py  Onnx_TensorRT.py  PT_ONNX.py  PyTorch_Onnx.py  PyTorch_TensorFlow.py  PyTorch_TensorRT.py  README.md  TF_ONNX.py  TF_TRT.py  TRT_Benchmark.py  TensorFlow_Onnx.py  TensorFlow_TensorRT.py  TensorRT_Test.py  conversion_utility_demo.ipynb  model_conversion_tools.py  sample_pytorch_mist.py
Dev Models/: FRCNN_TestModel.py  MobileNet_TestModel.py  YOLO_testmodel.py
Docker Container/: DockerFile
Experiments/Calibration Utilities/: recorder.py
Experiments/Python POCs/: benchmarking.py  camera.py  key_iter.py  launchfile.py  tensorrt_test.py  tf_trt_int8.py
Experiments/extermination_workspace/: zed_opencv_example.py
Experiments/ishaan_workspace/src/pipeline/node_test/: package.xml
Experiments/ishaan_workspace/src/pipeline/node_test/node_test/: camera_node.py  display_node.py  jetson_node.py
Experiments/utils/: model_conversion_tools.py
Experiments/valery_tests/: .gitignore
Maize Model/sample_maize_images/: IMG_1830_03.txt  IMG_1832_13.txt  IMG_1851_02.txt  IMG_1861_04.txt  IMG_1875_21.txt  IMG_1882_17.txt  IMG_1883_04.txt  IMG_1886_38.txt  (+7 more)
Python POCs/: Python Unit Tests.py  TF Benchmarking Example.py  TF2_trt_quantization.py  camera_subscriber.cpp  camera_subscriber.py  composable_arch.py  composable_arch_new.py  display.py  idk2.py  inference_example.py  jetson.py  key_iter.py  lifecycle_arch.py  lifecycle_arch_new.py  sample_convert.py  sample_endtoend.py  tensorrt_test.py  test2.py
Workspace/ros2_ws/src/node_test/: CMakeLists.txt
Workspace/ros2_ws/src/node_test/src/: jetson_node.cpp
Workspace/ros2_ws/src/onnx_cpp/: CMakeLists.txt
actions_scripts/: Python Unit Tests.py  benchmarking.sh  delete-logs.sh  off_script.py  post-job-script.sh  pre-job-script.sh  system_metrics_benchmarking.py  unit-tests.sh
assets/: node_diagram.drawio
calibration_tools/: README.md  camera_calibration.py  colorspace_calibration.py  exporter_test.py  nms_calibration.py  roi_calibration.py  test.py  values.csv
containers/: Jetson-Base.Dockerfile  Jetson-Dev.Dockerfile  ML-CPU.Dockerfile  ML-GPU.Dockerfile  README.md  ROS-Dev.Dockerfile
conversion_tools/: ONNX_GS.py  ONNX_TRT.py  ONNX_Verify.py  PT_ONNX.py  PT_TRT.py  README.md  TRT_Benchmark.py  TRT_Verify.py  engine_builder.py  model_exporter.py  model_inference.py  ultralytics_test_2.py  visualizer.py
cpp_wip/: component_ex.cpp  composable_container.cpp  cuda_pass.cpp  cuda_receive.cpp  cuda_stream_manager.cpp  lcuda_pass_launch.py  lifecycle_compose.cpp  preprocessing_node.cpp  sample_cmake.txt  sample_xml.txt
examples/: .gitignore  onnx2trt.sh
instrumentation/: CPU.Dockerfile  GPU.Dockerfile  Jetson-Dev.Dockerfile  TensorFlow.Dockerfile  compose.yaml
models/: README.md
python_wip/: Local_Test.py  Object Count Tracker.py  Stream_E2E.py  TF_ONNX.py  TF_TRT Inference.py  TF_TRT.py  TRT Quantization Examples.py  async_cuda.py  bbox_display.py  composable_lifecycle_launch.py  composable_node_launch.py  cuda_download_1.py  cuda_nonblocking.py  cuda_nonblocking_infer.py  cuda_stream_inference.py  cuda_sync.py  cuda_sync_infer.py  cuda_sync_launch.py  display.py  function_tracing.py  gpu_pointer_node.py  idk1.py  inference_comparison.py  inference_stream.py  integrated_serial.py  interop-cupy-cv.py  jax_ex.py  jetson_node.py  lifecycle_architecture.py  lifecycle_idkold.py  monolith_multhread.py  numba_ex.py  numba_example.py  overlap.py  pinned_multithread.py  pinned_multithread_executor.py  pointer_to_pt.py  post_stream.py  postprocess_comparison.py  preprocess_comparison.py  (+11 more)
python_workspace/: CMakeLists.txt  package.xml  setup.cfg  setup.py
python_workspace/launch/: jetson_node_launch.py
python_workspace/msg/: BoundingBox.msg
python_workspace/python_workspace/: camera_node.py  extermination_node.py  jetson_node.py
ros2_ws/: README.md  launch.sh  ros2.md
ros2_ws/src/cpp_package/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_package/launch/: launch.py
ros2_ws/src/cpp_package/src/: camera_node.cpp  extermination_node.cpp  inference_node.cpp  picture_node.cpp  proxy_node.cpp  video_node.cpp
ros2_ws/src/python_workspace/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/python_workspace/launch/: README.md  launch.py
ros2_ws/src/python_workspace/python_workspace/: camera_node.py  display_node.py  extermination_node.py  inference_node.py  jetson_node.py  picture_node.py  proxy_node.py  video_node.py
ros2_ws/src/python_workspace/python_workspace/scripts/: display.py  image_source.py  tracker.py  utils.py
workspace_cpp/: .gitignore
(+328 files in other folders)
