<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_workspace</name>
  <version>0.0.0</version>
  <description>Python workspace for ROS2 nodes using custom interfaces</description>
  <maintainer email="ishaandatta737@gmail.com">user</maintainer>
  <license>Apache License 2.0 </license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>pyzed</depend>
  <depend>numpy</depend>
  <depend>tensorrt</depend>
  <depend>pycuda</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Custom messages -->
  <depend>message_generation</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>